k8s/apps/new-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cwx
  name: new-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: new-api
  template:
    metadata:
      labels:
        app: new-api
    spec:
      restartPolicy: Always
      containers:
        - name: new-api
          image: harbor.chenwx.top/public/new-api:v0.13.1-patch.1
          ports:
            - containerPort: 3000
              protocol: TCP
