k8s/apps/new-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: new-api
  namespace: cwx
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: new-api
