k8s/apps/new-api/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: new-api
  namespace: cwx
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`new-api.chenwx.top`)
      kind: Rule
      services:
        - name: new-api
          namespace: cwx
          port: 80
